# gitatlas

./: .gitignore  AGENTS.md  Makefile  README.md  catalog-info.yaml  index.html  package-lock.json  package.json
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  error.rs  lib.rs  main.rs
src-tauri/src/commands/: detail.rs  mod.rs  operations.rs  scan.rs  status.rs
src-tauri/src/db/: mod.rs  models.rs  queries.rs
src-tauri/src/git/: detail.rs  discovery.rs  operations.rs  status.rs
src-tauri/src/scanner/: mod.rs
src/components/: BulkActions.tsx  Dashboard.tsx  FilterBar.tsx  GitHubLink.tsx  RepoCard.tsx  RepoList.tsx  StatusBadge.tsx
src/components/detail/: BranchPanel.tsx  CommitForm.tsx  CommitGraph.tsx  CommitLog.tsx  DiffViewer.tsx  FileChanges.tsx  ReadmeViewer.tsx  RepoDetail.tsx  StashPanel.tsx
src/components/detail/graph/: GraphSvg.tsx  computeGraph.ts
src/hooks/: useRepoDetail.ts  useRepoStatus.ts  useRepos.ts
src/types/: detail.ts  index.ts  repo.ts
