[package]
name = "gitatlas"
version = "0.1.0"
description = "Multi-repo Git observability dashboard"
authors = ["Graham"]
edition = "2021"

[lib]
name = "gitatlas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.20"
walkdir = "2.5"
ignore = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
dirs-next = "2"
